Add new testenv
*Add dataset denoise metadata from h2bids

--- a/tox.ini
+++ b/tox.ini
@@ -43,3 +43,24 @@ commands =
         "https://zenodo.org/record/15538160/files/smoke_test_data.zip?download=1"
     unzip -q wonkyconn/data/test_data/smoke_test_data.zip -d wonkyconn/data/test_data/
     rm wonkyconn/data/test_data/smoke_test_data.zip
+
+[testenv:test_data_h2bids_denoise_metadata]
+description = install test data for h2bids denoise metadata
+skip_install = true
+allowlist_externals =
+    mkdir
+    wget
+    unzip
+    rm
+commands =
+    mkdir -p wonkyconn/data/test_data
+    wget --retry-connrefused \
+        --waitretry=5 \
+        --read-timeout=20 \
+        --timeout=15 \
+        -t 0 \
+        -q \
+        -O wonkyconn/data/test_data/test_data_h2bids_denoise_metadata.zip \
+        "https://zenodo.org/records/16369007/files/test_data_h2bids_denoise_metadata.zip?download=1"
+    unzip -q wonkyconn/data/test_data/test_data_h2bids_denoise_metadata.zip -d wonkyconn/data/test_data/
+    rm wonkyconn/data/test_data/test_data_h2bids_denoise_metadata.zip
