Download data h2bids for testing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,10 @@ jobs:
       id: download
       run: tox -e test_data
 
+    - if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+    name: Download h2bids denoise metadata test data
+    run: tox -e test_data_h2bids_denoise_metadata
+
   build:
     runs-on: ubuntu-latest
     steps:
