--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,8 +61,9 @@ jobs:
       run: tox -e test_data
 
     - if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-    name: Download h2bids denoise metadata test data
-    run: tox -e test_data_h2bids_denoise_metadata
+      name: Download h2bids denoise metadata test data
+      id: download h2bids denoise metatada
+      run: tox -e test_data_h2bids_denoise_metadata
 
   build:
     runs-on: ubuntu-latest
