changed the path in Seann's smoke test to work on the downloadable datas

--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ commands =
     rm wonkyconn/data/test_data/smoke_test_data.zip
 
 [testenv:test_data_halfpipe_ds30]
-description = install test data
+description = install test data halfipe
 skip_install = true
 allowlist_externals =
     mkdir
