Revert "Revert "Add smoke data using halfpipe2bids outputs""

--- a/tox.ini
+++ b/tox.ini
@@ -68,3 +68,66 @@ commands =
         "https://zenodo.org/records/16368481/files/smoke_test_halfpipe_ds30.zip?download=1"
     unzip -q wonkyconn/data/test_data/smoke_test_halfpipe_ds30.zip -d wonkyconn/data/test_data/
     rm wonkyconn/data/test_data/smoke_test_halfpipe_ds30.zip
+
+[testenv:test_data_h2bids_denoise_metadata]
+description = install test data for h2bids denoise metadata
+skip_install = true
+allowlist_externals =
+    mkdir
+    wget
+    unzip
+    rm
+commands =
+    mkdir -p wonkyconn/data/test_data
+    wget --retry-connrefused \
+        --waitretry=5 \
+        --read-timeout=20 \
+        --timeout=15 \
+        -t 0 \
+        -q \
+        -O wonkyconn/data/test_data/test_data_h2bids_denoise_metadata.zip \
+        "https://zenodo.org/records/16843552/files/test_data_h2bids_denoise_metadata.zip?download=1"
+    unzip -q wonkyconn/data/test_data/test_data_h2bids_denoise_metadata.zip -d wonkyconn/data/test_data/
+    rm wonkyconn/data/test_data/test_data_h2bids_denoise_metadata.zip
+
+[testenv:test_data_h2bids_impute_and_metadata]
+description = install test data for h2bids impute and metadata
+skip_install = true
+allowlist_externals =
+    mkdir
+    wget
+    unzip
+    rm
+commands =
+    mkdir -p wonkyconn/data/test_data
+    wget --retry-connrefused \
+        --waitretry=5 \
+        --read-timeout=20 \
+        --timeout=15 \
+        -t 0 \
+        -q \
+        -O wonkyconn/data/test_data/test_data_h2bids_impute_and_metadata.zip \
+        "https://zenodo.org/records/16843552/files/test_data_h2bids_impute_and_metadata.zip?download=1"
+    unzip -q wonkyconn/data/test_data/test_data_h2bids_impute_and_metadata.zip -d wonkyconn/data/test_data/
+    rm wonkyconn/data/test_data/test_data_h2bids_impute_and_metadata.zip
+
+[testenv:test_data_h2bids_impute_nan]
+description = install test data for h2bids impute nan
+skip_install = true
+allowlist_externals =
+    mkdir
+    wget
+    unzip
+    rm
+commands =
+    mkdir -p wonkyconn/data/test_data
+    wget --retry-connrefused \
+        --waitretry=5 \
+        --read-timeout=20 \
+        --timeout=15 \
+        -t 0 \
+        -q \
+        -O wonkyconn/data/test_data/test_data_h2bids_impute_nan.zip \
+        "https://zenodo.org/records/16843552/files/test_data_h2bids_impute_nan.zip?download=1"
+    unzip -q wonkyconn/data/test_data/test_data_h2bids_impute_nan.zip -d wonkyconn/data/test_data/
+    rm wonkyconn/data/test_data/test_data_h2bids_impute_nan.zip
