--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,21 @@ jobs:
       id: download
       run: tox -e test_data
 
+    - if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+      name: Download h2bids denoise metadata test data
+      id: download_h2bids_denoise_metadata
+      run: tox -e test_data_h2bids_denoise_metadata
+
+    - if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+      name: Download h2bids impute and metadata test data
+      id: download_h2bids_impute_and_metadata
+      run: tox -e test_data_h2bids_impute_and_metadata
+
+    - if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+      name: Download h2bids impute nan test data
+      id: download_h2bids_impute_nan
+      run: tox -e test_data_h2bids_impute_nan
+
   build:
     runs-on: ubuntu-latest
     steps:
